--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
 		"bootstrap": "^5.3.1",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
+		"mysql2": "^3.8.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.21.3"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
@@ -35,6 +37,7 @@
 		"@types/node": "^20.5.0",
 		"@types/react": "^18.2.20",
 		"@types/react-dom": "^18.2.7",
+		"@types/react-router-dom": "^5.3.3",
 		"esbuild": "^0.19.2",
 		"esbuild-sass-plugin": "^2.12.0",
 		"nodemon": "^3.0.1",
