--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"bootstrap": "^5.3.1",
 		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
 		"express": "^4.18.2",
 		"mysql2": "^3.8.0",
 		"react": "^18.2.0",
